--- a/test6/test6.html
+++ b/test6/test6.html
@@ -1,63 +1,19 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>ESP32-CAM Video Stream</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      body { font-family: Arial; text-align: center; margin:0px auto; padding-top: 30px;}
-      table { margin-left: auto; margin-right: auto; }
-      td { padding: 8 px; }
-      .button {
-        background-color: #2f4468;
-        border: none;
-        color: white;
-        padding: 20px 40px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;
-        margin: 6px 3px;
-        cursor: pointer;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
-      }
-      img {  width: auto ;
-        max-width: 100% ;
-        height: auto ; 
-      }
-    </style>
-  </head>
-  <body>
-    <h1>ESP32-CAM Video Stream</h1>
-    <img src="" id="photo" >
-    <div align="center">
-      <button class="button" onclick="startStream('start');">START</button>
-      <button class="button" onclick="startStream('stop');">STOP</button>
-    </div>
-   <script>
-    function startStream(x) {
-      if(x=='start'){
-        document.getElementById("photo").src = window.location.href.slice(0, -1) + ":81/stream";
-      }
-      else if(x=='stop'){
-        document.getElementById("photo").src = "";
-      } 
-    }
-    window.onload = document.getElementById("photo").src = window.location.href.slice(0, -1) + ":81/stream";
-  </script>
-  <h1>LED Control</h1>
-  <button class="button" onclick="toggleLed('on')">ON</button>
-  <button class="button" onclick="toggleLed('off')">OFF</button>
-  <script>
-      function toggleLed(state) {
-          fetch('/led?state=' + state)
-              .then(response => response.text())
-              .then(data => console.log(data))
-              .catch(error => console.error('Error:', error));
-      }
-  </script>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ESP32-CAM Insect Monitor</title>
+  <style>
+    body { font-family: Arial; text-align: center; margin-top: 20px; }
+    img { width: 320px; height: auto; }
+    button { font-size: 16px; padding: 10px 20px; margin: 10px; }
+  </style>
+</head>
+<body>
+  <h1>ESP32-CAM Insect Monitor</h1>
+  <img src="/stream" alt="Live Stream"><br>
+  <button onclick="fetch('/control?state=on').then(() => console.log('LED On'));">LED ON</button>
+  <button onclick="fetch('/control?state=off').then(() => console.log('LED Off'));">LED OFF</button>
+  <br><a href="/capture">Capture Single Image</a>
+</body>
 </html>
